--- a/index.html
+++ b/index.html
@@ -4,24 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="css/estilos.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="preconectar" href="https://fonts.googleapis.com">
       <link rel="preconectar" href="https://fonts.gstatic.com" crossorigin>
       <link href="https: //fonts.googleapis.com/css2? family= Inter:wght@300 & display=swap" rel="stylesheet"> 
     <title>amoblarte-design</title>
-    <script> 
-      function vermas(id){
-      if(id=="mas"){
-      document.getElementById("desplegar").style.display="block";   
-      document.getElementById("mas").style.display="none"; 
-      }
-      else{
-      document.getElementById("desplegar").style.display="none";
-      document.getElementById("mas").style.display="inline";
-      }
-      }
-      </script>
+    
 </head>
 
 <body>
@@ -118,12 +107,12 @@
       </div>
 
       <div id="pielogo" class="col-12 col-xl-4">
-          <img class="logito" src="./imagenes/logocompleto.jpeg" width="100px" height="100px" alt="logito">
+          <img class="logito" src="./imagenes/logocompleto.png" width="100px" height="100px" alt="logito">
       </div>
 
       <div id="instagram" class="col-12 col-xl-4">
           <a href="https://instagram.com/amoblarte.design?igshid=NmNmNjAwNzg= " target="_blank">
-            <img src="./imagenes/instagram.svg" width="25px" height="25px" alt="ig">
+            <img src="./imagenes/instagram (1).svg" width="25px" height="25px" alt="ig">
           </a>
       </div>
 
