--- a/index7productos.html
+++ b/index7productos.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="somos una empresa dedicada a la construccion de muebles de interior, enfocada en el diseño solicitado por el cliente echos a mediday con los mejores materiales del mercado.  ">    <meta name="keywords" content="productos, cocina, placard, decks, vanitory, promociones  ">
     <link rel="stylesheet" href="css/estilos.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="preconectar" href="https://fonts.googleapis.com">
@@ -48,7 +49,19 @@
   
     
   </header>  
+
+<section class="migajas">
+  <nav aria-label="breadcrumb">
+    <ol class="breadcrumb m-0">
+      <li class="breadcrumb-item"><a href="./index.html">Home</a></li>
+      <li class="breadcrumb-item"><a href="./index2contacto.html">contacto</a></li>
+      <li class="breadcrumb-item active" aria-current="page">productos</li>
+    </ol>
+  </nav>
+</section>
+  
       <section class="centroproductos">
+        <h1 class="textoproductos">productos</h1>
         <div class="row row-cols-1 row-cols-md-2 g-4">
           <a class="linkproductos" href="./index3cocina.html">
           <div class="col">
@@ -113,7 +126,7 @@
     <section id="piepagina" class="container">
       <div class="row align-items-center ">
         <div id="pietexto" class="col-12 col-xl-4">
-          <p>Copyright © 2022 | Design: Total Image Studios.</p>
+          <p>Copyright © 2022 | Design: Juan Gutierrez.</p>
   
         </div>
   
