--- a/index2contacto.html
+++ b/index2contacto.html
@@ -39,6 +39,9 @@
                 <li class="nav-item">
                   <a class="nav-link " href="./index.html" >home</a>
                 </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="./index8promociones.html">promociones</a>
+                </li>
               </ul>
             </div>
           </div>
