--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
   <!--encabezado-->
 <header>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light" >
+  <nav id="menunav" class="navbar navbar-expand-lg navbar-light " >
     <div class="container">
       
      
@@ -68,10 +68,10 @@
 
 <section class="padre">
 <div class="hijo">
-  <h1 class="texto bg-light">Diseño de muebles de interior</h1>
+  <h1 class="texto ">Diseño de muebles de interior</h1>
 
 <p class="parrafocentrado">
-  somos una empresa dedicada a la construccion de muebles de interior, enfocada en el diseño solicitado por el cliente echos a mediday con los mejores materiales del mercado. <br> La ruta transitada para el desarrollo ha sido la que queda determinada por la investigación, la innovación y la inversión dentro del marco vital de la pasión y vocación empresaria la cual se expresa a través de la responsabilidad y el compromiso social, valores históricos sin los cuales, nada hubiese sido posible.</p>
+  Somos una empresa dedicada a la construccion de muebles de interior, enfocada en el diseño solicitado por el cliente echos a medida y con los mejores materiales del mercado. </p>
 </div>
 
 
