--- a/index4placard.html
+++ b/index4placard.html
@@ -65,32 +65,32 @@
   
     <div class="placard-container">
       <div data-aos="fade-down-right" class="placard-item">
-        <img class="placard-img" src="./imagenes/img.carpinteria/cocina.florida.jpg" alt="placard">
+        <img class="placard-img" src="./imagenes/placard/vicentelopez2.jpg" alt="placard">
         <h2 class="placard-title">Florida</h2>
         </div>
       <div data-aos="fade-down-left" class="placard-item">
-        <img class="placard-img" src="./imagenes/img.carpinteria/cocina.juan.b.justo.jpg" alt="placard">
-        <h2 class="placard-title"> Juan b. Justo</h2>
+        <img class="placard-img" src="imagenes/placard/vicentelopez.jpg" alt="placard">
+        <h2 class="placard-title"> Vicente Lopez</h2>
       </div>
       <div data-aos="fade-up" class="placard-item">
-        <img class="placard-img" src="./imagenes/img.carpinteria/cocina.las.heras.jpg" alt="placard">
-        <h2 class="placard-title"> Las Heras</h2>
+        <img class="placard-img" src= "imagenes/placard/santoslugares2.jpg" alt="placard">
+        <h2 class="placard-title"> Santos Lugares</h2>
       </div>
       <div data-aos="fade-up" class="placard-item">
-        <img class="placard-img" src="./imagenes/img.carpinteria/cocina.coronel.diaz.jpg" alt="placard">
-        <h2 class="placard-title">Coronel Diaz</h2>
+        <img class="placard-img" src="imagenes/placard/santosluagres.jpg" alt="placard">
+        <h2 class="placard-title">Santos Lugares</h2>
       </div>
       <div data-aos="fade-up" class="placard-item">
-        <img class="placard-img" src="./imagenes/img.carpinteria/cocina.florida.dos.jpg" alt="placard">
-        <h2 class="placard-title">Florida</h2>
+        <img class="placard-img" src="imagenes/placard/palermo.jpg" alt="placard">
+        <h2 class="placard-title">Palermo</h2>
       </div>
       <div data-aos="fade-up" class="placard-item">
-        <img class="placard-img" src="./imagenes/img.carpinteria/cocina.florida.tres.jpg" alt="placard">
-        <h2 class="placard-title">Florida</h2>
+        <img class="placard-img" src= "imagenes/placard/once2.jpg" alt="placard">
+        <h2 class="placard-title">Once</h2>
       </div>
       <div data-aos="fade-up" class="placard-item">
-        <img class="placard-img" src="./imagenes/img.carpinteria/cocina.juan.b.justo.dos.jpg" alt="placard">
-        <h2 class="placard-title">Juan b. Justo</h2>
+        <img class="placard-img" src="imagenes/placard/once.jpg" alt="placard">
+        <h2 class="placard-title">Once</h2>
       </div>
     
   </section>
