--- a/index5decks.html
+++ b/index5decks.html
@@ -66,32 +66,32 @@
     
       <div class="decks-container">
         <div data-aos="fade-down-right" class="decks-item">
-          <img class="decks-img" src="./imagenes/img.carpinteria/cocina.florida.jpg" alt="decks">
-          <h2 class="decks-title">Florida</h2>
+          <img class="decks-img" src="./imagenes/decks/recoletacuatro.jpg" alt="decks">
+          <h2 class="decks-title">recoleta</h2>
           </div>
         <div data-aos="fade-down-left" class="vanitory-item">
-          <img class="decks-img" src="./imagenes/img.carpinteria/cocina.juan.b.justo.jpg" alt="decks">
-          <h2 class="decks-title"> Juan b. Justo</h2>
+          <img class="decks-img" src="./imagenes/decks/recoletados.jpg" alt="decks">
+          <h2 class="decks-title"> </h2>
         </div>
         <div data-aos="fade-up" class="decks-item">
-          <img class="decks-img" src="./imagenes/img.carpinteria/cocina.las.heras.jpg" alt="decks">
-          <h2 class="decks-title"> Las Heras</h2>
+          <img class="decks-img" src="./imagenes/decks/recoletatres.jpg" alt="decks">
+          <h2 class="decks-title"> </h2>
         </div>
         <div data-aos="fade-up" class="decks-item">
-          <img class="decks-img" src="./imagenes/img.carpinteria/cocina.coronel.diaz.jpg" alt="decks">
-          <h2 class="decks-title">Coronel Diaz</h2>
+          <img class="decks-img" src="imagenes/decks/recoleta.jpg" alt="decks">
+          <h2 class="decks-title"></h2>
         </div>
         <div data-aos="fade-up" class="decks-item">
-          <img class="decks-img" src="./imagenes/img.carpinteria/cocina.florida.dos.jpg" alt="decks">
-          <h2 class="decks-title">Florida</h2>
+          <img class="decks-img" src="./imagenes/decks/recoletacinco.jpg" alt="decks">
+          <h2 class="decks-title"></h2>
         </div>
         <div data-aos="fade-up" class="decks-item">
-          <img class="decks-img" src="./imagenes/img.carpinteria/cocina.florida.tres.jpg" alt="decks">
-          <h2 class="decks-title">Florida</h2>
+          <img class="decks-img" src="./imagenes/decks/recoletaseis.jpg" alt="decks">
+          <h2 class="decks-title"></h2>
         </div>
         <div data-aos="fade-up" class="decks-item">
-          <img class="decks-img" src="./imagenes/img.carpinteria/cocina.juan.b.justo.dos.jpg" alt="decks">
-          <h2 class="decks-title">Juan b. Justo</h2>
+          <img class="decks-img" src="./imagenes/decks/recoletasiete.jpg" alt="decks">
+          <h2 class="decks-title"></h2>
         </div>
       
       </section>
