--- a/index6vanitory.html
+++ b/index6vanitory.html
@@ -65,31 +65,31 @@
   
     <div class="vanitory-container">
       <div data-aos="fade-down-right" class="vanitory-item">
-        <img class="vanitory-img" src="./imagenes/img.carpinteria/cocina.florida.jpg" alt="cocina">
+        <img class="vanitory-img" src="./imagenes/vanitory/nordelta.jpg" alt="vanitory">
         <h2 class="vanitory-title">Florida</h2>
         </div>
       <div data-aos="fade-down-left" class="vanitory-item">
-        <img class="vanitory-img" src="./imagenes/img.carpinteria/cocina.juan.b.justo.jpg" alt="vanitory">
+        <img class="vanitory-img" src="./imagenes/vanitory/nordeltados.jpg" alt="vanitory">
         <h2 class="vanitory-title"> Juan b. Justo</h2>
       </div>
       <div data-aos="fade-up" class="vanitory-item">
-        <img class="vanitory-img" src="./imagenes/img.carpinteria/cocina.las.heras.jpg" alt="vanitory">
+        <img class="vanitory-img" src="./imagenes/vanitory/pacheco.jpg" alt="vanitory">
         <h2 class="vanitory-title"> Las Heras</h2>
       </div>
       <div data-aos="fade-up" class="vanitory-item">
-        <img class="vanitory-img" src="./imagenes/img.carpinteria/cocina.coronel.diaz.jpg" alt="vanitory">
+        <img class="vanitory-img" src="./imagenes/vanitory/pachecodos.jpg" alt="vanitory">
         <h2 class="vanitory-title">Coronel Diaz</h2>
       </div>
       <div data-aos="fade-up" class="vanitory-item">
-        <img class="vanitory-img" src="./imagenes/img.carpinteria/cocina.florida.dos.jpg" alt="vanitory">
+        <img class="vanitory-img" src="./imagenes/vanitory/pachecotres.jpg" alt="vanitory">
         <h2 class="vanitory-title">Florida</h2>
       </div>
       <div data-aos="fade-up" class="vanitory-item">
-        <img class="vanitory-img" src="./imagenes/img.carpinteria/cocina.florida.tres.jpg" alt="vanitory">
+        <img class="vanitory-img" src="./imagenes/vanitory/sanisidro.jpg" alt="vanitory">
         <h2 class="vanitory-title">Florida</h2>
       </div>
       <div data-aos="fade-up" class="vanitory-item">
-        <img class="vanitory-img" src="./imagenes/img.carpinteria/cocina.juan.b.justo.dos.jpg" alt="vanitory">
+        <img class="vanitory-img" src="./imagenes/vanitory/sanisidrodos.jpg" alt="vanitory">
         <h2 class="vanitory-title">Juan b. Justo</h2>
       </div>
     
