espero que el ultimo commit

--- a/index3cocina.html
+++ b/index3cocina.html
@@ -90,12 +90,15 @@
       </div>
       <div class="floridauno galery-item">
         <img src="./imagenes/img.carpinteria/cocina.florida.dos.jpg" class="galery-img" alt="">
+        <h2 class="subtitulo text-center ">Florida</h2>
       </div>
       <div class="floridados galery-item">
         <img src="./imagenes/img.carpinteria/cocina.florida.tres.jpg" class="galery-img" alt="">
+        <h2 class="subtitulo text-center ">Florida</h2>
       </div>
       <div class="floridatres galery-item">
         <p class="textococina galery-img">Trabajo realizado, comenzando con la torre de la cocina, bajos y altos mesada ,marcos ,bibilioteca y vajillero. Personaliza con opciones de diseño flexible. Relaciona de manera versátil ambientes como la cocina, living y espacios de trabajo o descanso. Esto se logra con un diseño accesible a través de formas simples, estanterías para objetos o libros, enseres domésticos, vajilla y otros.</p>
+        <h2 class="subtitulo text-center ">Florida</h2>
       </div>
       <div class="juan galery-item">
         <img class="galery-img" src="./imagenes/img.carpinteria/cocina.juan.b.justo.dos.jpg" alt="juan b justo">
@@ -103,19 +106,23 @@
       </div>
       <div class="justo galery-item">
         <img class="galery-img" src="./imagenes/img.carpinteria/cocina.juan.b.justo.jpg" alt="juan b justo">
+        <h2 class="subtitulo text-center"> Juan B Justo</h2>
       </div>
       <div class="bautista galery-item">
         <p class="textococina galery-img">Esta línea permite personalizar cada cocina con aire joven ya que dispone de novedosos herrajes, variedad de colores y texturas, adaptándose a todas las posibilidades.</p>
+        <h2 class="subtitulo text-center"> Juan B Justo</h2>
       </div>
       <div class="las galery-item">
         <h2 class="subtitulo text-center">Las Heras</h2>
         <img class="galery-img" src="./imagenes/img.carpinteria/cocina.las.heras.jpg" alt="Las Heras">
       </div>
       <div class="heras galery-item">
-        <p class="textococina galery-img">Esta línea permite personalizar cada cocina con aire joven ya que dispone de novedosos herrajes, variedad de colores y texturas, adaptándose a todas las posibilidades.</p>
+        <p class="textococina galery-img">La combinación de acabados nuevos da como resultado un amoblamiento minimalista y funcional con identidad propia. Sus puertas italianas de PVC de alta calidad y durabilidad, no sufren alteración durante su vida útil. Esta característias tan especiales hacen a este modelo único y exclusivo.</p>
+        <h2 class="subtitulo text-center">Las Heras</h2>
       </div>
       <div class="diaz galery-item">
-        <p class="textococina galery-img">Esta línea permite personalizar cada cocina con aire joven ya que dispone de novedosos herrajes, variedad de colores y texturas, adaptándose a todas las posibilidades.</p>
+        <p class="textococina galery-img">La perfecta combinación de calidez y modernidad son las principales características de este amoblamiento innovador. Sus puertas en laca italiana dan una terminación exclusiva de alto brillo, elegancia y suavidad.</p>
+        <h2 class="subtitulo text-center"> Coronel Diaz</h2>
       </div>
       <div class="coronel galery-item">
         <h2 class="subtitulo text-center"> Coronel Diaz</h2>
