--- a/index4placard.html
+++ b/index4placard.html
@@ -88,11 +88,11 @@
         <h2 class="placard-title"> Vicente Lopez</h2>
       </div>
       <div class="lopez placard-item">
-        <p class="textococina galery-img">Esta línea permite personalizar cada cocina con aire joven ya que dispone de novedosos herrajes, variedad de colores y texturas, adaptándose a todas las posibilidades.</p>
+        <p class="textococina galery-img">Unidad de producto resuelto completamente en melamina con herrajes de unión para una precisa terminación y calidad de producto para el guardado de prendas.</p>
         <h2 class="placard-title"> Vicente Lopez</h2>
       </div>
       <div class="sanlu placard-item">
-        <p class="textococina galery-img">Esta línea permite personalizar cada cocina con aire joven ya que dispone de novedosos herrajes, variedad de colores y texturas, adaptándose a todas las posibilidades.</p>
+        <p class="textococina galery-img">Buscando la optimización de los espacios reducidos trabajamos en la modularidad de nuestros productos. Los adaptamos a diferentes dimensiones, de manera de encontrar la satisfacción del cliente e involucrarlo en el diseño de su propio espacio.</p>
         <h2 class="placard-title"> Santos Lugares</h2>
       </div>
       <div data-aos="fade-up" class="santos placard-item">
@@ -109,7 +109,7 @@
           <h2 class="placard-title">Once</h2>
         </div>
         <div class="oncedos placard-item">
-          <p class="textococina galery-img">Esta línea permite personalizar cada cocina con aire joven ya que dispone de novedosos herrajes, variedad de colores y texturas, adaptándose a todas las posibilidades.</p>
+          <p class="textococina galery-img">El sistema de puertas deslizante dispone de un mecanismo de montaje independiente del ambiente, es instalado sobre la estructura misma del mueble. Con alternativas de colores y herrajes.</p>
           <h2 class="placard-title">Once</h2>
         </div>
         <div data-aos="fade-up" class="onceuno placard-item">
@@ -122,7 +122,8 @@
       </div>
       <div class="soho placard-item">
        
-        <p class="textococina galery-img">Esta línea permite personalizar cada cocina con aire joven ya que dispone de novedosos herrajes, variedad de colores y texturas, adaptándose a todas las posibilidades.</p>
+        <p class="textococina galery-img">
+          Ofrecemos una gran variedad de modelos de placard, acordes con las exigencias de espacios y usos particulares. Los módulos construidos en melamina se combinan con diversas opciones de puertas corredizas: melamina lisa o texturada, vidrio, espejo o combinadas, según el diseño solicitado. Los cajones con guías metálicas brindan la comodidad y la funcionalidad necesarias en esta clase de amoblamiento.</p>
         <h2 class="placard-title">Palermo</h2>
       </div>
      
