--- a/index5decks.html
+++ b/index5decks.html
@@ -92,7 +92,7 @@
           <h2 class="decks-title">Recoleta 2</h2>
         </div>
         <div data-aos="fade-up" class="tres decks-item">
-          <p class="textococina decks-img">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Inventore facilis sequi nostrum omnis facere nulla numquam, repellendus quibusdam voluptas porro consequatur similique magnam cum laboriosam, ea magni, vero earum enim? Amet modi, possimus, corporis optio, cumque inventore sed accusamus error nostrum distinctio officia! Quod quia fuga dolore obcaecati, rem earum.</p>
+          <p class="textococina decks-img">Las maderas duras tropicales son ideales para este uso, por poseer las condiciones de resistencia y durabilidad necesarias.La instalación se hace sobre una estructura de listones o tirantes de madera dura.Se podrá optar por la colocación tradicional con tornillos fresados a la vista, o el sistema europeo con fijación oculta.</p>
           <h2 class="decks-title">Recoleta 3</h2>
         </div>
         <div data-aos="fade-up" class="cuatro decks-item">
