--- a/index6vanitory.html
+++ b/index6vanitory.html
@@ -88,7 +88,9 @@
         <h2 class="vanitory-title"> Juan b. Justo</h2>
       </div>
       <div data-aos="fade-down-left" class="juantres vanitory-item">
-        <p class="textococina vanitory-img">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde explicabo odio ipsum laudantium repudiandae iure. Praesentium dolores quae consectetur rem, aperiam laudantium quisquam totam alias nulla in nisi hic soluta.</p>
+        <p class="textococina vanitory-img">Línea Premium es 100% diseño y calidad.
+          En esta oportunidad presentamos un diseño único de mueble vanitory, fabricado con materiales de primera línea.
+          Melamina de 18 mm marca FAPLAC, con tapacanto en pvc apto para humedad de baño.</p>
         <h2 class="vanitory-title"> Juan b. Justo</h2>
       </div>
       <div data-aos="fade-up" class="juandos vanitory-item">
@@ -101,12 +103,12 @@
         <h2 class="vanitory-title"> Las Heras</h2>
       </div>
       <div data-aos="fade-down-left" class="heras vanitory-item">
-        <p class="textococina vanitory-img">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde explicabo odio ipsum laudantium repudiandae iure. Praesentium dolores quae consectetur rem, aperiam laudantium quisquam totam alias nulla in nisi hic soluta.</p>
+        <p class="textococina vanitory-img"> Puede ser de madera maciza o estar hecho -en su estructura- de aglomerado o MDF, pero terminarse (la capa que vemos) en pintura, laca o barniz en el caso de la madera o en laca, pintura o chapas (naturales o melaminas) para aglomerado o MDF. Lacas y barnices dan color y brillo pero también alargan la vida del mueble, lo protegen de la humedad y otros factores como calor, polvo y suciedad.</p>
         <h2 class="vanitory-title">Las Heras</h2>
       </div>
       
       <div data-aos="fade-down-left" class="coronel vanitory-item">
-        <p class="textococina vanitory-img">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde explicabo odio ipsum laudantium repudiandae iure. Praesentium dolores quae consectetur rem, aperiam laudantium quisquam totam alias nulla in nisi hic soluta.</p>
+        <p class="textococina vanitory-img">Tiene un diseño elegante y funcional que podes ver en las fotos, y al igual que el vanitory está especialmente confeccionadas con materiales de alta resistencia al agua y la humedad del baño. </p>
         <h2 class="vanitory-title"> Coronel Diaz</h2>
       </div>
       <div data-aos="fade-up" class="diaz vanitory-item">
@@ -118,7 +120,7 @@
         <h2 class="vanitory-title">Florida</h2>
       </div>
       <div data-aos="fade-down-left" class="flodos vanitory-item">
-        <p class="textococina vanitory-img">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde explicabo odio ipsum laudantium repudiandae iure. Praesentium dolores quae consectetur rem, aperiam laudantium quisquam totam alias nulla in nisi hic soluta.</p>
+        <p class="textococina vanitory-img">Está especialmente diseñado para hacer rendir los espacios pequeños, con elegancia y funcionalidad. Gracias a su Bacha de excelente diseño, y a su amplio cajón , aprovecha al máximo el espacio, permitiendo un uso cómodo y práctico de todo el espacio debajo del mueble.</p>
         <h2 class="vanitory-title"> Florida</h2>
       </div>
       <div data-aos="fade-up" class="flotres vanitory-item">
