pf-gutierrez juan

--- a/index2contacto.html
+++ b/index2contacto.html
@@ -110,7 +110,8 @@
 
         </div>
       </div>
-            <form id="formulario" class="row g-3">
+      <section class="formu">
+            <form id="formulario" class="row g-3 bg-light">
               <div class="col-md-6">
                 <label for="inputEmail4" class="form-label">Email</label>
                 <input type="email" class="form-control" id="inputEmail4">
@@ -125,44 +126,44 @@
               </div>
               
               <div class="col-md-6">
-                <label for="inputCity" class="form-label">ciudad</label>
+                <label for="inputCity" class="form-label">Ciudad</label>
                 <input type="text" class="form-control" id="inputCity">
               </div>
               <div class="col-md-4">
-                <label for="inputState" class="form-label">localidad</label>
+                <label for="inputState" class="form-label">Localidad</label>
                 <select id="inputState" class="form-select">
-                  <option selected>tres de febrero</option>
-                  <option>la matanza</option>
-                  <option>moron</option>
-                  <option>la plata</option>
-                  <option>berazategui</option>
-                  <option>tigre</option>
-                  <option>bransen</option>
-                  <option>comodoro pi</option>
-                  <option>tandil</option>
-                  <option>vicente lopez</option>
+                  <option selected>Tres de febrero</option>
+                  <option>La Matanza</option>
+                  <option>Moron</option>
+                  <option>La Plata</option>
+                  <option>Berazategui</option>
+                  <option>Tigre</option>
+                  <option>Bransen</option>
+                  <option>Comodoro pi</option>
+                  <option>Tandil</option>
+                  <option>Vicente Lopez</option>
 
                 </select>
               </div>
               <div class="col-md-12">
-                <label for="inputZip" class="form-label">consulta</label>
+                <label for="inputZip" class="form-label">Consulta</label>
                 <input type="text" class="form-control" id="inputZip">
               </div>
               <div class="col-12">
                 <div class="form-check">
                   <input class="form-check-input" type="checkbox" id="gridCheck">
                   <label class="form-check-label" for="gridCheck">
-                    confirmo los datos
+                    Confirmo los datos
                   </label>
                 </div>
               </div>
               <div class="col-12">
-                <button type="submit" class="btn btn-primary">enviar</button>
+                <button type="submit" class="btn btn-secondary"">enviar</button>
               </div>
             </form>
             
         </div>
-
+      </section>
 
   </main>
   <section class="migajas">
