--- a/index8promociones.html
+++ b/index8promociones.html
@@ -72,15 +72,15 @@
       <img src="./imagenes/promociones/fondopromociones.png" class="card-img" alt="promociones">
       <div class="card-img-overlay">
         
-        <h1 class="card-title">Descuentos en placards</h1>
+        <h1 class="card-title text-center">Promocion primavera-verano</h1>
         <p class="textopromo card-text">Disfruta el placer del orden... <br> Amoblarte te ofrece descuentos exclusivos en todas sus lineas de placards y vestidores. </p>
-        <h2 class="textopromo">Promocion primavera-verano</h2>
+        
       </div>
     </div>
   </section>
   <main>
     <section class="arreglo">
-      <h1 class="textopromociones">promociones</h1>
+      <h1 class="textopromociones">Promociones</h1>
       <div class="card-group bg-light">
         <div class="card">
           <img src="./imagenes/promociones/ofertauno.png" class="card-img-top" alt="Placards Estructurales">
@@ -128,9 +128,9 @@
           <nav aria-label="breadcrumb">
             <ol class="breadcrumb m-0">
               <li class="breadcrumb-item"><a href="./index.html">Home</a></li>
-              <li class="breadcrumb-item"><a href="./index2contacto.html">contacto</a></li>
-              <li class="breadcrumb-item"><a href="./index7productos.html">productos</a></li>
-              <li class="breadcrumb-item active" aria-current="page">promociones</li>
+              <li class="breadcrumb-item"><a href="./index2contacto.html">Contacto</a></li>
+              <li class="breadcrumb-item"><a href="./index7productos.html">Productos</a></li>
+              <li class="breadcrumb-item active" aria-current="page">Promociones</li>
             </ol>
           </nav>
         </section>
