--- a/index7productos.html
+++ b/index7productos.html
@@ -152,8 +152,8 @@
         <nav aria-label="breadcrumb">
           <ol class="breadcrumb m-0">
             <li class="breadcrumb-item"><a href="./index.html">Home</a></li>
-            <li class="breadcrumb-item"><a href="./index2contacto.html">contacto</a></li>
-            <li class="breadcrumb-item active" aria-current="page">productos</li>
+            <li class="breadcrumb-item"><a href="./index2contacto.html">Contacto</a></li>
+            <li class="breadcrumb-item active" aria-current="page">Productos</li>
           </ol>
         </nav>
       </section>
