--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <meta name="description" content="somos una empresa dedicada a la construccion de muebles de interior, enfocada en el diseño solicitado por el cliente echos a mediday con los mejores materiales del mercado.  ">
+    <meta name="description" content="somos una empresa dedicada a la construccion de muebles de interior, enfocada en el diseño solicitado por el cliente echos a medida y con los mejores materiales del mercado.  ">
     <meta name="keywords" content="productos, cocina, placard, decks, vanitory, promociones  ">
     <link rel="stylesheet" href="css/estilos.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -53,6 +53,9 @@
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="./index2contacto.html">Contacto</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./index9carrito.html"><img src="./imagenes/carrito.png" alt=""></a>
                   </li>
                   
                   
